changes for ubi8.7 java17 build from repo : https://github.com/aman-agrawal/igor-oes/tree/jdk17